--- a/app/src/main/res/layout/activity_emp_job_history.xml
+++ b/app/src/main/res/layout/activity_emp_job_history.xml
@@ -30,20 +30,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingStart="8dp"
             android:text="Job History"
             android:textColor="#000000"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:paddingStart="8dp"
-            app:layout_constraintStart_toEndOf="@id/btnBack"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/btnBack"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewJobHistory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"/>
+        android:padding="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/ripple_on_surface_47"/>
 </LinearLayout>
